Revision history for {{$dist->name}}

{{$NEXT}}

0.11      2019-12-18 05:46:43 -0700

0.10_07   2019-12-17 19:29:34 -0700
  - Additional diagnostics

0.10_06   2019-12-16 17:07:33 -0700
  - Additional diagnostics

0.10_05   2019-12-15 18:55:16 -0700
  - All detecton logic has been moved from Alien/MSYS.pm into
    the alienfile.  This is how most Alien::Build Aliens work,
    so it makes more sense.
  - Remove mingw-get cache, man pages and documentation which saves
    about 35MB (1/3 of the total) on a share install.

0.10_04   2019-12-15 07:02:23 -0700
  - Bump EUMM requirements

0.10_03   2019-12-11 16:11:24 -0700
  - Prefer curl to HTTP::Tiny when Net::SSLeay and IO::Socket::SSL
    are not installed.
  - Fix tests to not rely on `touch` which is frequently not available
    on Windows.

0.10_02   2017-08-23 14:11:48 -0400
  - Use MSYS2 if found, instead of downloading MSYS

0.10_01   2017-08-18 17:46:48 -0400
  - Use Alien::Build + alienfile for build
  - Switch from Module::Build (MB) to ExtUtils::MakeMaker (EUMM)
  - Remove dependency on File::ShareDir

0.09      2017-07-23 00:04:49 -0400
  - Remove dependency on File::HomeDir

0.08      2017-06-27 05:02:40 -0400
  - Add environment override ALIEN_MSYS_INSTALL_TYPE, ALIEN_INSTALL_TYPE

0.07      2014-05-15 09:17:18 -0400
  - fix reinstall bug (GH#3)

0.06      2014-05-15 04:00:21 -0400
  - Fix build bug where Win32::Shortcut is installed
    but no desktop icon for the MSYS GUI installer (GH#3)

0.05      2014-05-08 08:54:54 -0400
  - documentation tweaks
  - search PATH for mingw-setup.exe as a method
    for discovering the msys root

0.04      2013-12-13 16:39:45 -0500
  - First CPAN release

0.03      2013-12-13 14:36:20 -0500
  - MSYS now downloaded and installed if not found

0.02      2013-12-08 16:08:37 -0500
  - documentation
  - msys_run does an exit(non-zero) on child failure

0.01      2013-12-07 13:37:22 -0500
  - initial version