@@ -1,8 +1,13 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Require at least Windows 7.  Windows XP is known to have poor
+    native crypto support, which is used my mingw-get and doesn't
+    work with sourceforge.  I recommend that you upgrade to Windows
+    10 or better.
 
 0.11      2019-12-18 05:46:43 -0700
+  - Production release identical to 0.10_07
 
 0.10_07   2019-12-17 19:29:34 -0700
   - Additional diagnostics
